Make hashcode of Double and Float more efficent (and pass android lint tests)