@@ -78,7 +78,7 @@ public class S2 {
   public int hashCode() {
     int result = 1;
     result = result * 37 + f1.hashCode();
-    result = result * 37 + new Double(f2).hashCode();
+    result = result * 37 + Double.valueOf(f2).hashCode();
     result = result * 37 + f3.hashCode();
     return result;
   }
